data/diff_tests/wasmtime/br_IncorrectConditionEvaluation_729.wast
;; 10. **Test Description:**    Create a `br_if` instruction within a `loop` that evaluates a condition based on both local and imported variables. Ensure the branch only executes when the combined condition is true.    - **Constraint Checked:** Branching based on conditions involving both local and imported variables within loops.    - **Relation to Incorrect Condition Evaluation:** Confirms correct branching based on complex conditions involving multiple variable scopes.

(assert_invalid
  (module
    (import "env" "external_condition" (func $external_condition (result i32)))
    (func (local i32)
      (loop
        (br_if 0 (i32.and (local.get 0) (call $external_condition))))
    )
  )
  "type mismatch"
)